--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/sanctum": "^2.6",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.0",
+        "nesbot/carbon": "^2.47",
         "sentry/sentry-laravel": "^2.3"
     },
     "require-dev": {
