--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "tailwindcss": "^2.0.1"
     },
     "dependencies": {
+        "izitoast": "^1.4.0",
         "select2": "^4.1.0-rc.0"
     }
 }
